--- a/Viscaya_Wency.html
+++ b/Viscaya_Wency.html
@@ -5,7 +5,6 @@
     <title>SICARUIS'S WEBPAGE</title>
     <meta charset="UTF-8" />
     <meta name="keywords" content="First, Activity, PELEC2" />
-    <meta name="description" content="Wency first Activity in PELEC2 and first WEBPAGE" />
     <meta name="author" content="Wency Viscaya - Sicaruis" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="refresh" content="60" />
@@ -71,7 +70,7 @@
                 <b>Email:</b> <a href="mailto:wencyviscaya10@gmail.com">wencyviscaya10@gmail.com</a>
             </p>
             <p>
-                <img src="c:\Users\ADMIN\Downloads\download-removebg-preview.png" alt="Facebook Icon"
+                <img src="c:\Users\ADMIN\Downloads\FacebookIcon.png" alt="Facebook Icon"
                     class="contact-icon" />
                 <b>Facebook:</b> <a href="https://www.facebook.com/wency.viscaya.1" target="_blank">Wency Viscaya</a>
             </p>
